rudder-web/src/main/webapp/style/rudder.css
/* ... */
td.Noanswer {
  background-color:#BBAAAA;
}

td.details{
	border:none;
}

li.eventLogUpdatePolicy {
  list-style-position: inside;  
  list-style-type: none;    
}

table.eventLogUpdatePolicy {
  width: 50%;
  margin-top: 0px;
  margin-left: 0px;
}



table.detailedReport {
  margin : 0;
  padding: 0 0 0 100px;
  width: 100%
}

span.detailedReportTitle {
    position:absolute;
}

table.fixedlayout{
    table-layout:fixed;
    word-wrap:break-word
    }

tr.detailedReportLine, td.detailedReportLine {
  padding: 0;
  margin: 0;
  border: 0;
}

td.severityWidth, th.severityWidth {
  width: 200px;
}

tr.unfoldable {
  cursor:pointer;
}

.diffOldValue {
    text-decoration:line-through;
}

/***********************************
 * Quicksearch
************************************/

.quicksearch {
  text-align: center;
  margin-top: 5px;	
}

/***********************************
 * Trees
************************************/
.treefilternodecursor{
  cursor:pointer;
  cursor:hand;
}

.treeGroupName , .treeDirective, .treeTechniqueName, .treeRuleName { 
  font-size:0.95em; 
}

.treeActiveTechniqueName , .treeActiveTechniqueCategoryName , .treeGroupCategoryName {
  font-weight: bold;
}

li.disableTreeNode > a {
  color: grey;
  font-style:italic;
}

.jstree-default.jstree-focused {
    background: none repeat scroll 0 0 #FFFFFF !important;
}


a>.jstree-icon
{
    background-position: 0!important;
}

.homePageBlock {
  margin: 10px; 
}

.homePageBlock li {
  list-style-type: disc;
  list-style-position:inside;
}

del {
  text-decoration: none;
  background: #FFD6D6;
}
 
ins {
  text-decoration: none;
  background: #D6FFD6;
}

table thead th div.DataTables_sort_wrapper {
  position: relative;
  padding-right: 20px;
}
 
table thead th div.DataTables_sort_wrapper span {
  position: absolute;
  top: 50%;
  margin-top: -8px;
  right: 0;
}

table thead th {
  border-top: none !important; 
  border-right: none !important; 
}

.fg-button {
  border-top: 1px solid #B4B3A8; 
  border-right: none !important; 
  font-weight: normal !important;
}

.paginate_button_disabled, .paginate_button, .paginate_active {
  border-top: 1px solid #B4B3A8; 
  border-bottom: 1px solid #B4B3A8; 
  border-left: 1px solid #B4B3A8; 
  border-right: none; 
  display:inline-block;
}

.dataTables_paginate .ui-state-default {
  text-decoration: none !important;
}

.dataTables_wrapper table {
	border-collapse: collapse;
}

#serverGrid_wrapper .dataTables_wrapper_top {
  border-top-left-radius: 0px !important;
  border-top-right-radius: 0px !important;
}
.bottomButton {
  margin-left:10px;
}
#SearchNodes {
  margin: 0px 0px 0px 0px;
}

.dataTables_paginate .last {
  border-right: 1px solid #B4B3A8 !important;
}

#allowedNetworksForm {
  margin-top: -7px;	
}

.database-info-table {
  width: auto;
}

.database-info-table td {
  border: none !important;	
}

#reportFromDate, #archiveReports {
  margin-left: 7px;	
}

div.ac_results {
  width: 304px !important;	
}

.ac_over {
  background-color: #414141 !important;
  color: white !important;
}

fieldset {
  border: 1px solid #B4B3A8;
}

.note {
  color: #555555;	
  margin: 5px 0px 0px 0px; 
}

.groupCategoryUpdateComponent {
  width: 450px;	
}

#ajaxItemContainer {
  float:left;
}

/**
 * Rollback
 */

.rollbackFieldSet {
  float : right;
  padding : 10px 0px;
  width : 400px;
  text-align : center;
}

.rollbackFieldSet legend{
  margin-left : 10px;
}

.alignRollback {
  vertical-align:50%
}

/**
 * Pending change request
 */

#changeRequestList {
  padding-left: 15px;
}

#changeRequestList li {
  list-style-type: disc;
}

}

